view binding added, design changed, bug fixes, code refactoring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'com.example.calculatorbymarkn'
     compileSdk 34
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     defaultConfig {
         applicationId "com.example.calculatorbymarkn"
         minSdk 21
